force-app/main/default/objects/CAA__c/CAA__c.object-meta.xml
<CustomObject>
    <label>CAA</label>
    <nameField>
        <label>CAA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>