force-app/main/default/objects/CAA__c/fields/AP__c.field-meta.xml
<CustomField>
    <fullName>AP__c</fullName>
    <formula>Approver__r.AP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeal</label>
    <type>Checkbox</type>
</CustomField>