force-app/main/default/objects/CAA__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Level</label>
    <referenceTo>Config_Level__c</referenceTo>
    <relationshipLabel>CAA</relationshipLabel>
    <relationshipName>CAA</relationshipName>
    <type>Lookup</type>
</CustomField>