force-app/main/default/objects/CAA__c/fields/Cabang__c.field-meta.xml
<CustomField>
    <fullName>Cabang__c</fullName>
    <label>Kode Cabang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>