force-app/main/default/objects/CAA__c/fields/DebugNote__c.field-meta.xml
<CustomField>
    <fullName>DebugNote__c</fullName>
    <label>DebugNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>