force-app/main/default/objects/CAA__c/fields/Job_title_code__c.field-meta.xml
<CustomField>
    <fullName>Job_title_code__c</fullName>
    <label>Job title code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>