force-app/main/default/objects/CAA__c/fields/RC__c.field-meta.xml
<CustomField>
    <fullName>RC__c</fullName>
    <formula>Approver__r.RC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reco</label>
    <type>Checkbox</type>
</CustomField>