force-app/main/default/objects/CAA__c/fields/RF__c.field-meta.xml
<CustomField>
    <fullName>RF__c</fullName>
    <formula>Approver__r.RF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reject Fin</label>
    <type>Checkbox</type>
</CustomField>