force-app/main/default/objects/CAA__c/fields/WorkLocation_code__c.field-meta.xml
<CustomField>
    <fullName>WorkLocation_code__c</fullName>
    <label>WorkLocation code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>