force-app/main/default/objects/CAA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cabang__c</columns>
    <columns>Scheme__c</columns>
    <columns>Level__c</columns>
    <columns>Approver__c</columns>
    <columns>NAME</columns>
    <columns>Exp_NA__c</columns>
    <columns>Exp_AP__c</columns>
    <columns>Exp_Pricing__c</columns>
    <columns>WorkLocation_code__c</columns>
    <columns>Job_title_code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>